Import magic from ourmeals.  CSS and tests need fixing yet.

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ DJANGO_SUPERUSER_USERNAME=luke
 DJANGO_SUPERUSER_PASSWORD=DJANGO_SUPERUSER_DUMMY_PASSWORD
 DJANGO_SUPERUSER_EMAIL=lukerohde@gmail.com
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-DJANGO_ALLOWED_PATHS=thing
+DJANGO_ALLOWED_PATHS=admin,accounts,collections,meals,scrape,meal-plan,generate-grocery-list,toggle-meal,delete-meal,save-grocery-list
 POSTGRES_DB=app # seed data will go in this database if there is any in the override file
-POSTGRES_HOST=pg
+POSTGRES_HOST=db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=POSTGRES_DUMMY_PASSWORD
 POSTGRES_PORT=5432
@@ -21,3 +21,8 @@ DIGITAL_OCEAN_APP_USER=appuser
 DIGITAL_OCEAN_DEPLOY_REPO=https://github.com/lukerohde/our-meals.git
 DIGITAL_OCEAN_DOMAIN=example.com
 DIGITAL_OCEAN_A_RECORDS=@,www
+RENDER_API_KEY=xxx
+AWS_ACCESS_KEY_ID=xxx
+AWS_SECRET_ACCESS_KEY=xxx
+AWS_REGION=ap-southeast-1
+AWS_MEDIA_BUCKET_NAME=example-project-media-xxxxxx # from pulumi output
