--- a/deploy-do/nginx/https.conf
+++ b/deploy-do/nginx/https.conf
@@ -39,7 +39,7 @@ server {
 
         # Handle Bare Root Path
     location = / {
-        limit_req zone=rate_limit_example.com burst=20 nodelay;
+        limit_req zone=rate_limit_ourmeals.online burst=20 nodelay;
         proxy_pass http://app:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
