--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -1,25 +1,37 @@
 services:
   app:
+    build:
+      target: devtest
+      args:
+        AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+        AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+        AWS_REGION: $AWS_REGION
+        AWS_MEDIA_BUCKET_NAME: $AWS_MEDIA_BUCKET_NAME
     volumes:
       - ./app:/home/pyuser/app:delegated
       - ./.media_volume:/home/pyuser/app/media
       - ./.packages:/home/pyuser/.local
       - app_user:/home/pyuser # for bash history etc
     command:
-      - ./docker-start.override
+      - ./start.override
     ports:
       - $APP_PORT:3000
+      - "1234:1234"  # Add this line for HMR
+      - "9323:9323"  # Playwright UI port
     networks:
-      development:
+      - development
+    environment:
+      - DISPLAY=host.docker.internal:0
+      - PLAYWRIGHT_HEADLESS=true
   pg:
     ports:
       - $POSTGRES_PORT:5432
-    networks:
-      - development
     volumes:
       - ./.pg_data:/pg_data
       - db_root:/root # for bash history etc
 #      - ./backup.sql.gz:/docker-entrypoint-initdb.d/seed.sql.gz
+    networks:
+      - development
   nginx:
     image: nginx:1.15-alpine
     restart: unless-stopped
@@ -29,12 +41,14 @@ services:
       - ./.nginx:/etc/nginx/conf.d
       - ./.certbot/certs:/etc/letsencrypt
       - ./.certbot/challenge:/var/www/certbot
-      - ./app/staticfiles:/usr/share/nginx/html/static_root
+      - ./app/collectstatic:/usr/share/nginx/html/static_root
       - ./app/templates/errors:/usr/share/nginx/html/errors
       #- ./app/.collectstatic/media_root:/usr/share/nginx/html/media_root
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - development
 networks:
   development:
 volumes:
