--- a/docker-compose.override.yml.prod.example
+++ b/docker-compose.override.yml.prod.example
@@ -1,5 +1,7 @@
 services:
   app:
+    build:
+      target: production
     ports:
       - $APP_PORT:3000
   nginx:
@@ -11,7 +13,7 @@ services:
       - ./.nginx:/etc/nginx/conf.d
       - ./.certbot/certs:/etc/letsencrypt
       - ./.certbot/challenge:/var/www/certbot
-      - ./app/staticfiles:/usr/share/nginx/html/static_root
+      - ./app/collectstatic:/usr/share/nginx/html/static_root
       - ./app/templates/errors:/usr/share/nginx/html/errors
       #- ./app/.collectstatic/media_root:/usr/share/nginx/html/media_root
     ports:
