--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ services:
     build:
       context: .
       dockerfile: ./app.dockerfile
+      target: production
+      args:
+        AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+        AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+        AWS_REGION: $AWS_REGION
+        AWS_MEDIA_BUCKET_NAME: $AWS_MEDIA_BUCKET_NAME
     restart: unless-stopped
     environment:
       - APP_PORT
-      - POSTGRES_DB
-      - POSTGRES_HOST
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_PORT
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       - REDIS_HOST
       - REDIS_PASSWORD
       - REDIS_PORT_NUMBER
@@ -21,11 +23,15 @@ services:
       - DJANGO_ALLOWED_HOSTS
       - DJANGO_DEBUG
       - OPENAI_API_KEY
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_REGION
+      - AWS_MEDIA_BUCKET_NAME
     links:
       - pg
     tty: true
     stdin_open: true
-    command: "python manage.py runserver 0.0.0.0:3000"
+    command: "gunicorn example_project.wsgi:application --bind 0.0.0.0:3000 --workers 3 --chdir ."
     volumes:
       - media_volume:/home/pyuser/app/media
   pg:
@@ -34,7 +40,6 @@ services:
     environment:
       - PGDATA=/pg_data
       - POSTGRES_DB
-      - POSTGRES_HOST
       - POSTGRES_USER
       - POSTGRES_PASSWORD
     volumes:
