--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - pg
     tty: true
     stdin_open: true
-    command: "gunicorn example_project.wsgi:application --bind 0.0.0.0:3000 --workers 3 --chdir ."
+    command: "gunicorn config.wsgi:application --bind 0.0.0.0:3000 --workers 3 --chdir ."
     volumes:
       - media_volume:/home/pyuser/app/media
   pg:
