Fix step and create page base template

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example_project",
+  "name": "voice-anki",
   "version": "1.0.0",
   "description": "Web application",
   "private": true,
