--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#COMPOSE_PROJECT_NAME=app-instance-name-or-override
+COMPOSE_PROJECT_NAME=voice-anki
 APP_PORT=3000
 DJANGO_SECRET_KEY=your-secret-key
 DJANGO_SUPERUSER_USERNAME=luke
@@ -7,7 +7,7 @@ DJANGO_SUPERUSER_EMAIL=lukerohde@gmail.com
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 DJANGO_ALLOWED_PATHS=admin,accounts,collections,meals,scrape,meal-plan,generate-grocery-list,toggle-meal,delete-meal,save-grocery-list
 POSTGRES_DB=app # seed data will go in this database if there is any in the override file
-POSTGRES_HOST=db
+POSTGRES_HOST=pg
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=POSTGRES_DUMMY_PASSWORD
 POSTGRES_PORT=5432
