--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -10,8 +10,8 @@ services:
     volumes:
       - ./app:/home/pyuser/app:delegated
       - ./.media_volume:/home/pyuser/app/media
-      - ./.packages:/home/pyuser/.local
       - app_user:/home/pyuser # for bash history etc
+      # - ./.packages:/home/pyuser/.local
     command:
       - ./start.override
     ports:
@@ -32,23 +32,23 @@ services:
 #      - ./backup.sql.gz:/docker-entrypoint-initdb.d/seed.sql.gz
     networks:
       - development
-  nginx:
-    image: nginx:1.15-alpine
-    restart: unless-stopped
-    links:
-      - app
-    volumes:
-      - ./.nginx:/etc/nginx/conf.d
-      - ./.certbot/certs:/etc/letsencrypt
-      - ./.certbot/challenge:/var/www/certbot
-      - ./app/collectstatic:/usr/share/nginx/html/static_root
-      - ./app/templates/errors:/usr/share/nginx/html/errors
-      #- ./app/.collectstatic/media_root:/usr/share/nginx/html/media_root
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - development
+  # nginx:
+  #   image: nginx:1.15-alpine
+  #   restart: unless-stopped
+  #   links:
+  #     - app
+  #   volumes:
+  #     - ./.nginx:/etc/nginx/conf.d
+  #     - ./.certbot/certs:/etc/letsencrypt
+  #     - ./.certbot/challenge:/var/www/certbot
+  #     - ./app/collectstatic:/usr/share/nginx/html/static_root
+  #     - ./app/templates/errors:/usr/share/nginx/html/errors
+  #     #- ./app/.collectstatic/media_root:/usr/share/nginx/html/media_root
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   networks:
+  #     - development
 networks:
   development:
 volumes:
